--- a/style.css
+++ b/style.css
@@ -8,6 +8,8 @@
 html, body {
   margin: 0;
   padding: 0;
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  padding: 25%;
 }
 canvas {
   /* background-color: pink; */
