--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ html, body {
   margin: 0;
   padding: 0;
   font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  /* font-family: 'Times New Roman', Times, serif; */
   /* padding: 15%; */
 }
 canvas {
